--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
       <artifactId>google-cloud-storage</artifactId>
       <version>1.103.0</version>
     </dependency>
+    <!-- Translation API -->
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-translate</artifactId>
+      <version>1.94.4</version>
+    </dependency>
     <!-- TestNG  -->
     <dependency>
       <groupId>org.testng</groupId>
@@ -97,6 +103,18 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.8.6</version>
+    </dependency>
+    <!-- Date & Time -->
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.10.5</version>
+    </dependency>
+    <!-- File Upload -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.4</version>
     </dependency>
   </dependencies>
 
