--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
       <artifactId>commons-fileupload</artifactId>
       <version>1.4</version>
     </dependency>
+    <!-- My Sql connector -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.15</version>
+    </dependency>
   </dependencies>
 
   <build>
